Added all texts and tags

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab1</title>
 </head>
-<a href="#">Chirpus Inc.</a>
 <body>
-    
+    <div>
+    <nav>
+    <a href="#">Chirpus Inc.</a>
+    <a href="#">Work</a>
+    <a href="#">About Us</a>
+    <a href="#">Contact</a>
+    </nav>
+</div>
+<button>Hire Us</button>
+<div>
+<h1>Chirpus Inc.</h1>
+<p>get aliquet nibh praesent tristique. Est placerat in egestas erat imperdiet. 
+    Urna cursus eget nunc scelerisque viverra mauris. Fringilla ut morbi tincidunt augue interdum.
+     Lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor. Dignissim sodales 
+    ut eu sem integer vitae justo eget. Volutpat diam ut venenatis tellus in metus vulputate.
+     Luctus accumsan tortor</p>
+     <button>Call To Action</button>
+</div>
+
 </body>
 </html>
