added some classes and style

--- a/index.html
+++ b/index.html
@@ -3,27 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" type="text/css"  href="style.css">
+  
+
+
     <title>Lab1</title>
 </head>
 <body>
     <div>
     <nav>
-    <a href="#">Chirpus Inc.</a>
-    <a href="#">Work</a>
-    <a href="#">About Us</a>
-    <a href="#">Contact</a>
+        <ul>
+    <li class="active"><a  href="#">Chirpus Inc.</a></li>
+    <li> <a  href="#">Work</a></li>
+   <li><a  href="#">About Us</a></li> 
+   <li> <a href="#">Contact</a></li>
+</ul>
+</ul>
     </nav>
 </div>
-<button>Hire Us</button>
-<div>
+<button class="btn">Hire Us</button>
+<div class="container">
 <h1>Chirpus Inc.</h1>
-<p>get aliquet nibh praesent tristique. Est placerat in egestas erat imperdiet. 
-    Urna cursus eget nunc scelerisque viverra mauris. Fringilla ut morbi tincidunt augue interdum.
-     Lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor. Dignissim sodales 
-    ut eu sem integer vitae justo eget. Volutpat diam ut venenatis tellus in metus vulputate.
-     Luctus accumsan tortor</p>
-     <button>Call To Action</button>
+<p class="info">get aliquet nibh praesent tristique. Est placerat in egestas erat imperdiet. 
+    Urna cursus eget nunc scelerisque viverra mauris. 
+    Lorem mollis aliquam ut porttitor leo a diam soll
+     eu sem integer vitae justo eget. Volutpat diam 
+    uctus accumsan tortor</p>
+     <button class="btn">Call To Action</button>
 </div>
-
+<footer>
+    <span>Chirpus Inc.</span>
+   <ul>
+        <li><a href="#">Link1</a></li>
+        <li><a href="#">Link2</a></li>
+        <li><a href="#">Link3</a></li>        
+    </ul>
+</footer>
 </body>
 </html>
